--- a/AuthServer.Core/AuthServer.Core.csproj
+++ b/AuthServer.Core/AuthServer.Core.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Repository\Concrete\" />
+  </ItemGroup>
+
 </Project>
