IGenericService, ITokenService, IAuthenticationService added.

--- a/AuthServer.Core/AuthServer.Core.csproj
+++ b/AuthServer.Core/AuthServer.Core.csproj
@@ -9,7 +9,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Repository\Concrete\" />
+    <Folder Include="Repository\Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SharedLibrary\SharedLibrary.csproj" />
   </ItemGroup>
 
 </Project>
